<resources>
    <string name="app_name">TouchPay</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_password">Senha</string>
    <string name="title_login">Entrar</string>
    <string name="txt_sub_title_login">Informe o seu usuário e senha para entrar</string>
    <string name="txt_sign_up">Cadastrar</string>
    <string name="txt_sign_in">Entrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_button_next">Próximo</string>
</resources>
