<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.movile.touchpay.presentation.signin.SignInActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edtxtEmail"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/lblEmail"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:ems="10"
            android:id="@+id/edtxtPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.56"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lblPassword"
            android:textSize="24sp"/>
    <TextView
            android:text="@string/txt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lblEmail"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="@dimen/edtxt_label_size"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/lblError"/>
    <TextView
            android:text="@string/txt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lblPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/edtxtEmail"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="@dimen/edtxt_label_size"/>

    <TextView
            android:id="@+id/titleLogin"
            android:text="@string/title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="@dimen/txt_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/txt_sub_title_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/subTitleLogin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/titleLogin"
            android:textSize="@dimen/txt_sub_title"
    />
    <Button
            android:text="@string/txt_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignIn" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/edtxtPassword" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
            app:layout_constraintVertical_chainStyle="packed"/>
    <Button
            android:text="@string/txt_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignUp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lblError"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/subTitleLogin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            android:textColor="#f44242"
            android:visibility="invisible"
            tools:text="Error"/>
</androidx.constraintlayout.widget.ConstraintLayout>
